<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tipcalculator.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_num_of_people"

        android:id="@id/tvNumPeopleLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_amount"
        android:id="@id/tvtotalAmount"
        android:layout_alignTop="@id/tvNumPeopleLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/etNumPeopleToSplit"
        android:maxLines="1"
        android:lines="1"
        android:gravity="center"
        android:layout_below="@id/tvNumPeopleLabel"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/tvNumPeopleLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTotalAmount"
        android:maxLines="1"
        android:lines="1"
        android:layout_below="@id/tvtotalAmount"
        android:layout_alignStart="@id/tvtotalAmount"
        android:layout_alignBottom="@id/etNumPeopleToSplit"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_below="@id/etNumPeopleToSplit"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/label_fifteen"
            android:id="@id/rbFifteen"
            android:singleLine="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:text="@string/label_twenty"
            android:id="@id/rbTwenty"
            android:layout_weight="0.03" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:id="@id/rbTwentyfive"
            android:text="@string/label_twentyfive"
            android:checked="false"
            android:layout_weight="0.04" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/label_other"
            android:id="@id/rbOther"
            android:checked="false"
            android:layout_weight="0.06" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:lines="1"
            android:id="@+id/etOtherTip"
            android:layout_weight="0.16"
            android:hint="00.00" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tip Amount"
        android:id="@+id/tvTipAmountLabel"
        android:gravity="center"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTipAmount"
        android:layout_alignBottom="@id/tvTipAmountLabel"
        android:gravity="center"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_alignStart="@+id/etTotalAmount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bill Amount"
        android:id="@+id/tvBillAmountLabel"
        android:layout_below="@id/tvTipAmountLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:layout_alignEnd="@id/tvTipAmountLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBillAmount"
        android:layout_alignBottom="@id/tvBillAmountLabel"
        android:gravity="center"
        android:layout_alignStart="@id/etTotalAmount"
        android:layout_alignEnd="@id/radioGroup" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Per Person"
        android:id="@+id/totalPerPersonLabel"
        android:layout_marginTop="54dp"
        android:layout_below="@id/tvBillAmountLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalPerPerson"
        android:layout_alignBottom="@id/totalPerPersonLabel"
        android:gravity="center"
        android:layout_alignStart="@id/etTotalAmount"
        android:layout_alignEnd="@id/radioGroup" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:id="@+id/btnSave"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/totalPerPersonLabel"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        android:id="@id/btnClear"
        android:layout_alignTop="@+id/btnSave"
        android:layout_toRightOf="@id/etNumPeopleToSplit" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXIT"
        android:id="@id/btnExit"
        android:layout_alignTop="@id/btnClear"
        android:layout_alignStart="@+id/tvTotalPerPerson" />


</RelativeLayout>
